src/test/ui/block-result/issue-22645.stderr
error[E0277]: the trait bound `{integer}: Scalar` is not satisfied
  --> $DIR/issue-22645.rs:15:5
   |
LL |   b + 3
   |     ^ the trait `Scalar` is not implemented for `{integer}`
   |
   = help: the following implementations were found:
             <f64 as Scalar>
note: required because of the requirements on the impl of `Add<{integer}>` for `Bob`
  --> $DIR/issue-22645.rs:8:19
   |
LL | impl<RHS: Scalar> Add <RHS> for Bob {
   |                   ^^^^^^^^^     ^^^

error[E0369]: cannot add `{integer}` to `Bob`
  --> $DIR/issue-22645.rs:15:5
   |
LL |   b + 3
   |   - ^ - {integer}
   |   |
   |   Bob

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
